@@ -51,6 +51,7 @@ extern FILE *dpx_open_file (const char *filename, int type);
 extern char * dpx_find_type1_file (const char *filename);
 extern char * dpx_find_truetype_file (const char *filename);
 extern char * dpx_find_opentype_file (const char *filename);
+extern char * dpx_find_dfont_file (const char *filename);
 
 #define DPXFOPEN(n,t)  dpx_open_file((const char *)(n),(t))
 #define DPXFCLOSE(f)   MFCLOSE((f))
